--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding-top: 100px;
+  padding-bottom: 100px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +12,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 16px;
+  --color1: #000000;
+  --color2: #20212d;
+  --color3: #696878;
+  --color4: #bfbfd8;
+  --color5: #f6ecf6;
 }
