--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,8 +14,12 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .App {
-  width: fit-content;
+  width: 800px;
   margin: 0 auto;
   font-size: 16px;
   --color1: #000000;
@@ -23,4 +27,5 @@ code {
   --color3: #696878;
   --color4: #bfbfd8;
   --color5: #f6ecf6;
+  --color6: #464550;
 }
