--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,11 @@ code {
 }
 
 .App {
-  width: 800px;
+  width: 900px;
+  padding: 60px;
+  background-color: rgb(252, 250, 250);
+  box-shadow: 2px 2px 7px var(--color4);
+  border-radius: 10px;
   margin: 0 auto;
   font-size: 16px;
   --color1: #000000;
