--- a/src/components/Costs/CostItem/ItemDate/ItemDate.module.css
+++ b/src/components/Costs/CostItem/ItemDate/ItemDate.module.css
@@ -22,3 +22,17 @@
   font-size: 22px;
   font-weight: 500;
 }
+
+@media (max-width: 576px) {
+  .date {
+    width: 100%;
+    flex-direction: row-reverse;
+    padding: 6px;
+    margin-bottom: 6px;
+  }
+
+  .day {
+    font-size: 16px;
+    margin-right: 6px;
+  }
+}
