--- a/src/components/CostsForm/CostsForm.module.css
+++ b/src/components/CostsForm/CostsForm.module.css
@@ -7,6 +7,10 @@
   box-shadow: 0px 2px 7px var(--color3);
 }
 
+.btnInner {
+  text-align: center;
+}
+
 .form {
   width: 100%;
 }
@@ -37,7 +41,8 @@ input:focus {
   margin-top: 20px;
 }
 
-.button {
+.button,
+.addCostBtn {
   padding: 12px 28px;
   font-size: 16px;
   border: none;
@@ -52,6 +57,38 @@ input:focus {
   margin-right: 20px;
 }
 
-.button:hover {
-  background-color: var(--color6);
+
+@media (hover: hover) {
+
+  .button:hover,
+  .addCostBtn:hover {
+    background-color: var(--color6);
+  }
+}
+
+@media (max-width: 576px) {
+  .costsForm {
+    padding: 10px;
+  }
+
+  .formInner {
+    width: 100%;
+  }
+
+
+  .actions {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+  .button {
+    width: 100%;
+  }
+
+  .button:first-child {
+    margin-bottom: 8px;
+  }
 }
