--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,21 @@ code {
   --color5: #f6ecf6;
   --color6: #464550;
 }
+
+@media (max-width: 1000px) {
+  body {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .App {
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .App {
+    padding: 20px;
+    border-radius: 0px;
+  }
+}
